[package]
name = "vanity"
version = "0.1.0"
edition = "2021"

[dependencies]
num_cpus = "1.16.0"
rand = "0.8.5"
rayon = "1.10.0"
snarkvm = "0.16.19"
statrs = "0.17.1"

[profile.release]
opt-level = "z"  # Use maximum optimization
lto = true       # Enable link-time optimization
codegen-units = 1  # Use a single codegen unit for better optimization
debug = false    # Disable debug information
